--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     users customize their experience, making the interface more comfortable for them.
                 </li>
             </ol>
-            <h2 id="features">On-Scroll Animation</h2>
+            <h2 id="animation">On-Scroll Animation</h2>
             <p>
                 On-scroll animations are important because they can significantly enhance user engagement by adding
                 visual interest and dynamism to a website.
@@ -123,7 +123,7 @@
                 <h1 class="title" style="text-align:center;">Scroll Down!</h1>
             </div>
 
-            <h2 id="parallax" class="mt-2">Multi-Layer Parallax Effect</h2>
+            <h2 id="multiparallax" class="mt-2">Multi-Layer Parallax Effect</h2>
             <p>
                 Multi-layer parallax scrolling involves multiple images moving at different speeds to enhance the depth
                 effect. This is achieved using the perspective and transform properties in CSS.
@@ -133,8 +133,8 @@
 
         <div class="wrapper">
             <div class="div2">
-                <img src="Mountain.png" class="background">
-                <img src="Trees.png" class="foreground">
+                <img src="Mountain.png" class="background" alt="Mountain">
+                <img src="Trees.png" class="foreground" alt="Trees">
             </div>
             <section id="section_1">
                 This effect was originally used in early video games (like the classic Moon Patrol from 1982) to
@@ -149,7 +149,7 @@
 
             <section id="section_2">
                 <div class="container mt-4">
-                    <h2 id="parallax">Understanding the Code</h2>
+                    <h2>Understanding the Code</h2>
                     <p>
                         Similar to the simple parallax scrolling, we must first define the structure in HTML and then
                         apply CSS.
